Update to 19439 and jdk 17+. feedback and ok sthen@